# octopus

./: README.md
client/: pyproject.toml
client/core/: execution.py  execution_output.py  service.py
client/src/: data_platform_client.py  octopus.py
client/src/core/: execution.py  execution_output.py
docker/: docker-compose.yml  flight.Dockerfile  flight.Dockerfile.dockerignore  spark.Dockerfile  spark.Dockerfile.dockerignore
docker/conf/: spark-defaults.conf
server/: build.sh  docker-compose.yml  example-docker-compose.yml  requirements.txt
server/data-transfer/: build.sh  pom.xml
server/data-transfer/examples/src/: flight_consumer.py  neo4j_publisher.py
server/data-transfer/src/main/java/: Dataset.java  (+3 more)
server/docker/: arrow-entrypoint.sh  docker-compose.yml  entrypoint.sh  flight-server.Dockerfile  old-docker-compose.yml  requirements.txt  spark-entrypoint.sh  spark-env.sh  spark-server.Dockerfile  sshd_config
server/docker/conf/: requirements.txt
server/docker/conf/spark/: spark-defaults.conf
server/docker/conf/ssh/: sshd_config
server/docker/dockerfiles/: flight-server.Dockerfile  spark-server.Dockerfile
server/docker/entrypoints/: spark-entrypoint.sh
server/docker/sched-tests/: launch-tests.py  print-worker-name.py  test-app2.py
server/job-dispatcher/: pyproject.toml
server/job-dispatcher/src/: main.py
server/job-dispatcher/src/model/: crud.py  database.py  models.py  schema.py
server/job-dispatcher/src/utils/: cmd_builder.py  constants.py  constants_gen.py  helper.py  requests.py
server/job-dispatcher/src/utils/scripts/: pyspark_connector.py
server/tests/: test-app1.py  test-app3.py
(+4 files in other folders)
